--- a/templates/index.html
+++ b/templates/index.html
@@ -304,10 +304,10 @@ button{
 <!-- ===== السلايدر ===== -->
 <div class="slider" id="slider">
     <div class="slide active">
-        <img src="{{ url_for('static', filename='hi/1.jpg') }}">
+        <img src="{{ url_for('static', filename='hi/1.png') }}">
         <div class="slide-text">
-            <h2>نادي مديسيسة الرياضي</h2>
-            <p>منصة رقمية حديثة وخدمات ذكية</p>
+            <h2>نعزي بحزن فقيدتنا</h2>
+            <p>المراءة الصالحة فوزية علي</p>
         </div>
     </div>
     <div class="slide">
@@ -463,3 +463,4 @@ function closeAdminModal(){
 
 </body>
 </html>
+
