--- a/templates/index.html
+++ b/templates/index.html
@@ -352,52 +352,52 @@ button{
     <div class="player-card">
         <img src="{{ url_for('static', filename='images/1.png') }}">
         <div class="watermark"></div>
-        <div class="player-name">اللاعب الأول</div>
+        <div class="player-name">أحمد الكاشف</div>
     </div>
     <div class="player-card">
         <img src="{{ url_for('static', filename='images/2.png') }}">
         <div class="watermark"></div>
-        <div class="player-name">اللاعب الثاني</div>
+        <div class="player-name">محمد الفاتح</div>
     </div>
     <div class="player-card">
         <img src="{{ url_for('static', filename='images/3.png') }}">
         <div class="watermark"></div>
-        <div class="player-name">اللاعب الثالث</div>
+        <div class="player-name">محمد الطيب</div>
     </div>
     <div class="player-card">
         <img src="{{ url_for('static', filename='images/4.png') }}">
         <div class="watermark"></div>
-        <div class="player-name">اللاعب الرابع</div>
+        <div class="player-name">وائــل بلة</div>
     </div>
     <div class="player-card">
         <img src="{{ url_for('static', filename='images/5.png') }}">
         <div class="watermark"></div>
-        <div class="player-name">اللاعب الخامس</div>
+        <div class="player-name">على محمد</div>
     </div>
     <div class="player-card">
         <img src="{{ url_for('static', filename='images/6.png') }}">
         <div class="watermark"></div>
-        <div class="player-name">اللاعب السادس</div>
+        <div class="player-name">احمد محمد</div>
     </div>
     <div class="player-card">
         <img src="{{ url_for('static', filename='images/7.png') }}">
         <div class="watermark"></div>
-        <div class="player-name">اللاعب السابع</div>
+        <div class="player-name">محمد بلة</div>
     </div>
     <div class="player-card">
         <img src="{{ url_for('static', filename='images/8.png') }}">
         <div class="watermark"></div>
-        <div class="player-name">اللاعب الثامن</div>
+        <div class="player-name">عثمان هيثم</div>
     </div>
     <div class="player-card">
         <img src="{{ url_for('static', filename='images/9.png') }}">
         <div class="watermark"></div>
-        <div class="player-name">اللاعب التاسع</div>
+        <div class="player-name">خضــر الخير</div>
     </div>
     <div class="player-card">
         <img src="{{ url_for('static', filename='images/10.png') }}">
         <div class="watermark"></div>
-        <div class="player-name">اللاعب العاشر</div>
+        <div class="player-name">عبد الله سعيد</div>
     </div>
     <div class="player-card">
         <img src="{{ url_for('static', filename='images/11.png') }}">
@@ -465,5 +465,6 @@ function closeAdminModal(){
 
 </body>
 </html>
+
 
 
