--- a/templates/index.html
+++ b/templates/index.html
@@ -311,21 +311,21 @@ button{
         </div>
     </div>
     <div class="slide">
-        <img src="{{ url_for('static', filename='hi/2.jpg') }}">
+        <img src="{{ url_for('static', filename='hi/2.png') }}">
         <div class="slide-text">
             <h2>روح الفريق</h2>
             <p>نبني الأبطال ونصنع المستقبل</p>
         </div>
     </div>
     <div class="slide">
-        <img src="{{ url_for('static', filename='hi/3.jpg') }}">
+        <img src="{{ url_for('static', filename='hi/3.png') }}">
         <div class="slide-text">
             <h2>اكتشاف المواهب</h2>
             <p>رعاية شاملة للاعبين</p>
         </div>
     </div>
     <div class="slide">
-        <img src="{{ url_for('static', filename='hi/4.jpg') }}">
+        <img src="{{ url_for('static', filename='hi/4.png') }}">
         <div class="slide-text">
             <h2>مديسيسة تجمعنا</h2>
             <p>رياضة – انتماء – تميز</p>
@@ -465,6 +465,7 @@ function closeAdminModal(){
 
 </body>
 </html>
+
 
 
 
