--- a/templates/index.html
+++ b/templates/index.html
@@ -306,8 +306,8 @@ button{
     <div class="slide active">
         <img src="{{ url_for('static', filename='hi/1.png') }}">
         <div class="slide-text">
-            <h2>نعزي بحزن فقيدتنا</h2>
-            <p>المراءة الصالحة فوزية علي</p>
+            <h2>سلمى معاوية عثمان الحسن</h2>
+            <p>تضع مدرسة مديسيسة في قائمة الشرف</p>
         </div>
     </div>
     <div class="slide">
@@ -465,6 +465,7 @@ function closeAdminModal(){
 
 </body>
 </html>
+
 
 
 
