--- a/templates/user.html
+++ b/templates/user.html
@@ -258,7 +258,7 @@ body {
     <div class="menu">
         <button>الخدمات</button>
         <div class="menu-content">
-            <a href="#">🏆 مشاهدة كأس العالم 2026</a>
+            <a href="/worldcup">🏆 مشاهدة كأس العالم 2026</a>
             <a href="#">🏠 شهادة سكن</a>
             <a href="#">🎓 شهادة مدرسية</a>
         </div>
@@ -344,3 +344,4 @@ async function downloadPDF(){
 
 </body>
 </html>
+
