--- a/templates/worldcup.html
+++ b/templates/worldcup.html
@@ -140,7 +140,7 @@ body{
 <div class="player-wrapper">
     <div class="video-box">
         <iframe
-            src="https://www.youtube.com/live/lwCsInUSDHQ?si=JmK7NYu1D0LxvKwZ"
+            src="https://www.youtube.com/live/SnlYY8B37Wo?si=ltS78B3oSQijolcE"
             allow="autoplay; encrypted-media; picture-in-picture"
             allowfullscreen>
         </iframe>
