--- a/templates/worldcup.html
+++ b/templates/worldcup.html
@@ -141,10 +141,11 @@ body{
 <div class="player-wrapper">
     <div class="video-box">
         <iframe 
-            src="https://youtu.be/QWMaZO-q64c?si=A4HA422vJaKUufeD" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-            allowfullscreen>
-        </iframe>
+    src="https://www.youtube.com/embed/QWMaZO-q64c" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    allowfullscreen>
+</iframe>
+
     </div>
 </div>
 
