--- a/templates/worldcup.html
+++ b/templates/worldcup.html
@@ -140,11 +140,12 @@ body{
 <!-- مشغل الفيديو -->
 <div class="player-wrapper">
     <div class="video-box">
-        <iframe 
-    src="https://www.youtube.com/embed/QWMaZO-q64c" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+  <iframe 
+    src="https://www.youtube.com/embed/QWMaZO-q64c?rel=0&modestbranding=1&autoplay=1&controls=0&showinfo=0&mute=1" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
     allowfullscreen>
 </iframe>
+
 
     </div>
 </div>
